2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/pdfmom.pl: Recognize "--version" as synonym
	for "-v".
	* src/devices/gropdf/pdfmom.1.man (Synopsis, Description):
	Document it.

2022-10-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/grog/grog.pl (version): Identify as a GNU program.

2022-10-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grolj4/grolj4.1.man (Typefaces): Add new
	subsection.

2022-10-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/meref.me.in (Columnated Output): Document persistence of
	`$s` register value across columnation mode changes.

	Fixes <https://savannah.gnu.org/bugs/?62717>.  Thanks to Dave
	Kemper for the report.

2022-10-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/meref.me.in: Annotate empty default arguments more
	consistently.

	Fixes <https://savannah.gnu.org/bugs/?62801>.  Thanks to Dave
	Kemper for the report.

2022-10-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/meref.me.in: Fix documentation errors.
	(Preprocessor Support) <PS>: Swap argument order (width comes
	first), note empty defaults, and (vaguely) describe their
	purpose.  DWB and GNU pic semantics evidently diverge here.
	(Summary) <\_>: Describe as "underrule", not "underscore".
	These are distinct: the latter is a glyph; the former is drawn
	by typesetters and rendered with SGR attributes on terminals.

2022-10-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* NEWS: Advise users of changes to "name" directive handling in
	font description files.

	Fixes <https://savannah.gnu.org/bugs/?61423>.  Thanks to Dave
	Kemper for the report.

2022-10-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/number.cpp: Refactor and fix code style nits.
	Boolify and rename static (local) functions.
	- parse_expr   -> is_valid_expression
	- start_number -> is_valid_expression_start
	- parse_term   -> is_valid_term